--- a/heroku_project-master (1)/heroku_project-master/package.json
+++ b/heroku_project-master (1)/heroku_project-master/package.json
@@ -14,7 +14,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.1.6",
+    "mongoose": ">=5.13.20",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
