--- a/heroku_project-master (1)/heroku_project-master/package.json
+++ b/heroku_project-master (1)/heroku_project-master/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "semver": ">=5.7.2",
     "bcrypt": "^2.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
